Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
        "4          70       1                ford torino  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,13 +148,13 @@
     "import pandas as pd\n",
     "data = pd.read_csv('auto-mpg.csv')\n",
     "# First convert horsepower into a string and then to int\n",
-    "\n",
+    "data['horsepower'].astype(str).astype(int)\n",
     "data.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
       "origin          392 non-null int64\n",
       "car name        392 non-null object\n",
       "dtypes: float64(3), int64(5), object(1)\n",
-      "memory usage: 27.6+ KB\n"
+      "memory usage: 27.7+ KB\n"
      ]
     }
    ],
