--- a/index.ipynb
+++ b/index.ipynb
@@ -335,7 +335,8 @@
     }
    ],
    "source": [
-    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
     "fig = plt.figure(figsize = (8,8))\n",
     "ax = fig.gca()\n",
     "data.hist(ax = ax);"
